# polymarket-whale-watcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  backtest.py  pyproject.toml  requirements.txt  setup.sh  test_signal_tracking.py
anomaly_signals/: 1092199.json  1106713.json  994900.json
backtest_reports/: 20260103_105825_BUY_7214USD_Maduro_out_by_January_31_2026.md
daily_briefings/: briefing_2026-03-30.md  briefing_2026-03-31.md  briefing_2026-04-01.md  briefing_2026-04-02.md  briefing_2026-04-03.md
data/: signals.db  signals.db-shm
reports/: 20260105_150505_BUY_7520USD_Trump_out_as_President_before_2027.md  20260105_160027_BUY_11946USD_Will_China_invade_Taiwan_by_end_of_2026.md  20260105_161349_BUY_9031USD_Khamenei_out_as_Supreme_Leader_of_Iran_by_March_31.md  20260105_163237_SELL_6042USD_Russia_x_Ukraine_ceasefire_by_end_of_2026.md  20260105_163359_BUY_6180USD_Russia_x_Ukraine_ceasefire_by_end_of_2026.md  20260105_163525_BUY_9999USD_Will_Logan_Pauls_PSA_10_Pokémon_Illustrator_Sale_P.md  20260105_163623_BUY_5262USD_Will_Logan_Pauls_PSA_10_Pokémon_Illustrator_Sale_P.md  20260105_163710_BUY_7799USD_Will_Logan_Pauls_PSA_10_Pokémon_Illustrator_Sale_P.md  20260105_163844_BUY_5688USD_Will_Logan_Pauls_PSA_10_Pokémon_Illustrator_Sale_P.md  20260105_164013_BUY_9999USD_Will_the_next_Prime_Minister_of_Hungary_be_Viktor_.md  20260105_165859_SELL_6120USD_Will_Ukraine_agree_to_cede_territory_to_Russia_bef.md  20260105_170031_BUY_8995USD_Over_5M_committed_to_the_Infinex_public_sale.md  20260105_172017_BUY_7857USD_Over_5M_committed_to_the_Infinex_public_sale.md  20260105_175948_BUY_5007USD_Over_5M_committed_to_the_Infinex_public_sale.md  20260105_180116_BUY_13366USD_Over_10M_committed_to_the_Infinex_public_sale.md  20260105_180316_BUY_10689USD_Will_María_Corina_Machado_enter_Venezuela_by_Janua.md  20260105_182801_BUY_9345USD_Over_5M_committed_to_the_Infinex_public_sale.md  20260105_184623_BUY_36000USD_Khamenei_out_as_Supreme_Leader_of_Iran_by_January_.md  20260105_184802_BUY_61688USD_Khamenei_out_as_Supreme_Leader_of_Iran_by_March_31.md  20260105_234315_BUY_8054USD_Maduro_mugshot_released_by_Monday.md  (+356 more)
(+332 files in other folders)
